--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="static/css/libs/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="static/css/libs/font-awesome/css/font-awesome.min.css">
-
+    <link rel="shortcut icon" href="static/img/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Quicksand" rel="stylesheet">
 </head>
 <body>
@@ -213,7 +213,9 @@
 
     <footer>
         <div class="container-fluid">
-            Lorem ipsum dolor sit amet?
+            <p class="credits">
+                Created by <a href="https://karina-estaba.gitlab.io/directorio-repositorios/" title="Explora otros proyectos :D">Karina Estaba <img src="static/img/link.svg" alt="Link" width="10" class="icon-link"></a>
+            </p>
         </div>
     </footer>
 </body>
